보안 설정 수정 2차