@@ -2,6 +2,7 @@ package com.safety.server.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -10,6 +11,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -19,48 +21,55 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // 1. CORS 설정 적용 (가장 먼저 실행되어야 함)
-                // 이 설정이 없으면 POST/PUT/DELETE 시 발생하는 예비 요청(OPTIONS)이 Spring Security 필터에서 막힐 수 있음
+                // 1. CORS 설정을 가장 먼저 적용
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // 2. CSRF 보호 비활성화
+                // 2. CSRF 비활성화
                 .csrf(csrf -> csrf.disable())
 
-                // 3. 세션 관리를 STATELESS로 설정
+                // 3. 세션 STATELESS 설정
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
 
-                // 4. 인가(Authorization) 규칙 설정
+                // 4. 인가 설정
                 .authorizeHttpRequests(authorize ->
                         authorize
-                                // React가 접속할 API 및 WebSocket 엔드포인트 전면 허용
+                                // ⚠️ Preflight 요청(OPTIONS)은 인증 없이 무조건 허용해야 함 (중요)
+                                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                                // API 및 소켓 경로 허용
                                 .requestMatchers("/ws/video/**", "/api/**").permitAll()
-                                // 개발 편의를 위해 모든 요청 허용 (운영 시에는 authenticated() 권장)
                                 .anyRequest().permitAll()
                 );
 
         return http.build();
     }
 
-    // 🛠️ [핵심] CORS 허용 설정 Bean 추가
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // 1. 허용할 오리진 (React 주소. 개발 중에는 모든 주소 허용 패턴 사용)
-        config.setAllowedOriginPatterns(List.of("*"));
+        // 🛠️ [수정] 와일드카드(*) 대신 프론트엔드 IP를 명시적으로 허용
+        // 리액트가 실행되는 주소(포트 3000)를 정확히 적어주세요.
+        config.setAllowedOrigins(List.of(
+                "https://100.64.239.86:3000",
+                "http://100.64.239.86:3000",
+                "http://localhost:3000",
+                "https://localhost:3000"
+        ));
 
-        // 2. 허용할 HTTP 메서드 (GET, POST, PUT, DELETE, OPTIONS 모두 허용)
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        // 허용할 메서드
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
-        // 3. 허용할 헤더 (모든 헤더 허용)
-        config.setAllowedHeaders(List.of("*"));
+        // 허용할 헤더
+        config.setAllowedHeaders(Arrays.asList("*"));
 
-        // 4. 자격 증명(쿠키 등) 허용 여부
+        // 자격 증명 허용 (쿠키, 인증헤더 등)
         config.setAllowCredentials(true);
 
-        // 위 설정을 모든 경로(/**)에 적용
+        // 브라우저가 Preflight 응답을 캐싱할 시간 (초) - 불필요한 예비 요청 줄임
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
